style.css
.body {
    font-family: Roboto;
}


/* top  */

.top {
    color: #e5e7eb;
    background-color: #1f2937;
    display: flex;
    flex-direction: column;
    padding: 70px;
    margin: -10px;
    justify-content: space-around;
}

.header, .intro {
    display: flex;
    align-items: center;
    align-content: space-between;
    justify-content: space-between;
    margin: 10px;
    margin-top: -30px;
}


.intro {
    display: flex;
    padding-top: 80px;
}

.introleft {
    display: flex;
    flex-direction: column;
    padding-right: 40px;
}

.headerlinks {
    display: flex;
    gap: 20px;
}

.intropic {
    align-self: center;
}



/* info section */

.info {

}

.infoheader {
    display: flex;
    justify-content: center;
    color: #1f2937;
    margin: 20px;

}

.infoboxes {
    display: flex;
    gap: 30px;
    flex-wrap: wrap;
    justify-content: center;
    margin: 20px;

}

.box {
    display: flex;
    flex-direction: column;
    flex: 0;
    text-align: center;
    color: grey;
}

.infoimg {
    border-radius: 8px;
    border: solid;
    border-width: 3px;
    border-color: #3882f6;
}







/* links */
a:link {
    color: #e5e7eb;
    font-size: 18px;
    text-decoration: none;
}
a:visited {
    text-decoration: none;
}
a:active{ 
    text-decoration: none;
}

button {
    background-color: #3882f6;
    color: #e5e7eb;
    font-family: Roboto;
    width: 80px;
    border: none;
    border-radius: 5px;
    padding: 5px;
}

